# usbprog-tools

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  NEWS  README  bootstrap  call_cmake.bat  config.h.in  configure.in
cli/: CMakeLists.txt  cliconfiguration.cc  cliconfiguration.h  commands.cc  commands.h  doxygen.h  io.cc  io.h  main.cc  shell.cc  shell.h  usbprog.cc  usbprog.h  usbprog.pod
cli-basic/: CMakeLists.txt  main.cc  usbprog-basic.pod  usbprog_basic.cc  usbprog_basic.h
cmake/: Findlibusb.cmake
doc/: Makefile  USBprog.tex
doc/images/: Makefile
gui/: CMakeLists.txt  Makefile.am  doxygen.h  driverassistant.cc  driverassistant.h  guiconfiguration.cc  guiconfiguration.h  infodialog.cc  infodialog.h  main.cc  pindialog.cc  pindialog.h  qtsleeper.cc  qtsleeper.h  usbprog-gui.pod  usbprog.qrc  usbprogApp.cc  usbprogApp.h  usbprogFrm.cc  usbprogFrm.h  usbprog_app.cc  usbprog_app.h  usbprog_mainwindow.cc  usbprog_mainwindow.h  viewer.cc  viewer.h  viewer_posix.cc  viewer_win32.cc  zadigrunner.cc  zadigrunner.h
libbw/: .libbw  CMakeLists.txt  bwconfig.h.in  bwerror.h  compiler.h  completion.cc  completion.h  datetime.cc  datetime.h  debug.cc  debug.h  exithandler.cc  exithandler.h  fileutils.cc  fileutils.h  main.doc  noncopyable.h  optionparser.cc  optionparser.h  os.h  os_generic.cc  os_posix.cc  serialfile.h  serialfile_posix.cc  stringutil.cc  stringutil.h  stringutil_compat.h
libbw/ext/getopt/: getopt.h  getopt_long.c
libbw/ext/timegm/: timegm.c  timegm.h
libbw/io/: CMakeLists.txt  serialfile.h  serialfile_linux.cc  serialfile_posix.cc  serialfile_posix_generic.cc  serialfile_private_posix.h  tempfile.cc  tempfile.h  tempfile_posix.cc
libbw/log/: CMakeLists.txt  debug.cc  debug.h  errorlog.cc  errorlog.h  fileerrorlog.cc  fileerrorlog.h  syserrorlog.cc  syserrorlog.h
md5/: CMakeLists.txt  md5.c  md5.h
scripts/: test_builds.sh
src/: CMakeLists.txt  Makefile.am  commands.cc  configuration.cc  configuration.h  io.cc  main.cc  shell.cc  usbprog.cc  usbprog.h
udev/: CMakeLists.txt  usbprog.rules.in
usb++/: configdescriptor.h  device.h  devicedescriptor.cc  devicedescriptor.h  devicehandle.h  exceptions.h  interfacedescriptor.h  lsusb.cc  usb++.h  usbmanager.h
usb++/v1.0/: configdescriptor.cc  device.cc  devicehandle.cc  interfacedescriptor.cc  usbmanager.cc  util.cc
usbpp/: CMakeLists.txt  configdescriptor.h  device.h  devicedescriptor.cc  devicedescriptor.h  devicehandle.h  doxygen.h  exceptions.h  interfacedescriptor.h  lsusb.cc  usbmanager.h  usbpp.h  util.h
usbpp/v0.1/: configdescriptor.cc  device.cc  devicehandle.cc  interfacedescriptor.cc  libusb_0.1.h  usb_error.h  usbmanager.cc
usbpp/v1.0/: configdescriptor.cc  device.cc  devicehandle.cc  error.cc  error.h  interfacedescriptor.cc  libusb_1.0.h  usbmanager.cc  util.cc
usbprog/: CMakeLists.txt  date.cc  date.h  devices.cc  devices.h  digest.cc  digest.h  downloader.cc  downloader.h  doxygen.h  firmwarepool.cc  firmwarepool.h  inifile.cc  inifile.h  optionparser.cc  optionparser.h  stringutil.cc  stringutil.h  sysinfo.h  sysinfo_mac.cpp  sysinfo_posix.cpp  sysinfo_win.cpp  tempdir.cc  tempdir.h  usbprog.cc  usbprog.h  util.cc  util.h
usbprog-core/: CMakeLists.txt  configuration.cc  configuration.h  date.cc  date.h  debug.cc  debug.h  devices.cc  devices.h  digest.cc  digest.h  doxygen.h  error.h  inifile.cc  inifile.h  oscompat.h  oscompat_win32.h  progressnotifier.h  sleeper.cc  sleeper.h  stringutil.cc  stringutil.h  types.h  util.cc  util.h
win32/: README  call_cmake.bat  installer.nsi  usbprog-gui.dev
win32/driver/: usbprog.inf
